Implement accessible SetValue action for contenteditable

Bug: 917817
Change-Id: Id1586493b47f74ca960fdf934fb099ec79225519
Reviewed-on: https://chromium-review.googlesource.com/c/1411292
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623171}
Former-commit-id: d9240658ffb6a5f156fd516ee478ced90e174349