third_party/blink/renderer/modules/accessibility/ax_layout_object.cc
@@ -2564,6 +2564,18 @@ bool AXLayoutObject::OnNativeSetValueAction(const String& string) {
     return true;
   }
 
+  if (HasContentEditableAttributeSet()) {
+    ExceptionState exception_state(v8::Isolate::GetCurrent(),
+                                   ExceptionState::kExecutionContext, nullptr,
+                                   nullptr);
+    ToHTMLElement(GetNode())->setInnerText(string, exception_state);
+    if (exception_state.HadException()) {
+      exception_state.ClearException();
+      return false;
+    }
+    return true;
+  }
+
   return false;
 }
 
