content/browser/accessibility/accessibility_action_browsertest.cc
@@ -3,6 +3,7 @@
 // found in the LICENSE file.
 
 #include "base/logging.h"
+#include "build/build_config.h"
 #include "content/browser/accessibility/browser_accessibility.h"
 #include "content/browser/accessibility/browser_accessibility_manager.h"
 #include "content/browser/web_contents/web_contents_impl.h"
@@ -350,6 +351,115 @@ IN_PROC_BROWSER_TEST_F(AccessibilityActionBrowserTest,
 
   BrowserAccessibility* focus = GetManager()->GetFocus();
   EXPECT_EQ(focus->GetId(), target->GetId());
+}
+
+IN_PROC_BROWSER_TEST_F(AccessibilityActionBrowserTest, InputSetValue) {
+  NavigateToURL(shell(), GURL(url::kAboutBlankURL));
+
+  AccessibilityNotificationWaiter waiter(shell()->web_contents(),
+                                         ui::kAXModeComplete,
+                                         ax::mojom::Event::kLoadComplete);
+  GURL url(
+      "data:text/html,"
+      "<input aria-label='Answer' value='Before'>");
+  NavigateToURL(shell(), url);
+  waiter.WaitForNotification();
+
+  BrowserAccessibility* target =
+      FindNode(ax::mojom::Role::kTextField, "Answer");
+  ASSERT_NE(nullptr, target);
+  EXPECT_EQ("Before",
+            target->GetStringAttribute(ax::mojom::StringAttribute::kValue));
+
+  AccessibilityNotificationWaiter waiter2(shell()->web_contents(),
+                                          ui::kAXModeComplete,
+                                          ax::mojom::Event::kValueChanged);
+  GetManager()->SetValue(*target, "After");
+  waiter2.WaitForNotification();
+
+  EXPECT_EQ("After",
+            target->GetStringAttribute(ax::mojom::StringAttribute::kValue));
+}
+
+IN_PROC_BROWSER_TEST_F(AccessibilityActionBrowserTest, TextareaSetValue) {
+  NavigateToURL(shell(), GURL(url::kAboutBlankURL));
+
+  AccessibilityNotificationWaiter waiter(shell()->web_contents(),
+                                         ui::kAXModeComplete,
+                                         ax::mojom::Event::kLoadComplete);
+  GURL url(
+      "data:text/html,"
+      "<textarea aria-label='Answer'>Before</textarea>");
+  NavigateToURL(shell(), url);
+  waiter.WaitForNotification();
+
+  BrowserAccessibility* target =
+      FindNode(ax::mojom::Role::kTextField, "Answer");
+  ASSERT_NE(nullptr, target);
+  EXPECT_EQ("Before",
+            target->GetStringAttribute(ax::mojom::StringAttribute::kValue));
+
+  AccessibilityNotificationWaiter waiter2(shell()->web_contents(),
+                                          ui::kAXModeComplete,
+                                          ax::mojom::Event::kValueChanged);
+  GetManager()->SetValue(*target, "Line1\nLine2");
+  waiter2.WaitForNotification();
+
+  EXPECT_EQ("Line1\nLine2",
+            target->GetStringAttribute(ax::mojom::StringAttribute::kValue));
+
+  // TODO(dmazzoni): On Android we use an ifdef to disable inline text boxes,
+  // which contain all of the line break information.
+  //
+  // We should do it with accessibility flags instead. http://crbug.com/672205
+#if !defined(OS_ANDROID)
+  // Check that it really does contain two lines.
+  auto start_pos = target->CreatePositionAt(0);
+  auto end_of_line_1 = start_pos->CreateNextLineEndPosition(
+      ui::AXBoundaryBehavior::CrossBoundary);
+  EXPECT_EQ(5, end_of_line_1->text_offset());
+#endif
+}
+
+IN_PROC_BROWSER_TEST_F(AccessibilityActionBrowserTest,
+                       ContenteditableSetValue) {
+  NavigateToURL(shell(), GURL(url::kAboutBlankURL));
+
+  AccessibilityNotificationWaiter waiter(shell()->web_contents(),
+                                         ui::kAXModeComplete,
+                                         ax::mojom::Event::kLoadComplete);
+  GURL url(
+      "data:text/html,"
+      "<div contenteditable aria-label='Answer'>Before</div>");
+  NavigateToURL(shell(), url);
+  waiter.WaitForNotification();
+
+  BrowserAccessibility* target =
+      FindNode(ax::mojom::Role::kGenericContainer, "Answer");
+  ASSERT_NE(nullptr, target);
+  EXPECT_EQ("Before",
+            target->GetStringAttribute(ax::mojom::StringAttribute::kValue));
+
+  AccessibilityNotificationWaiter waiter2(shell()->web_contents(),
+                                          ui::kAXModeComplete,
+                                          ax::mojom::Event::kValueChanged);
+  GetManager()->SetValue(*target, "Line1\nLine2");
+  waiter2.WaitForNotification();
+
+  EXPECT_EQ("Line1\nLine2",
+            target->GetStringAttribute(ax::mojom::StringAttribute::kValue));
+
+  // TODO(dmazzoni): On Android we use an ifdef to disable inline text boxes,
+  // which contain all of the line break information.
+  //
+  // We should do it with accessibility flags instead. http://crbug.com/672205
+#if !defined(OS_ANDROID)
+  // Check that it really does contain two lines.
+  auto start_pos = target->CreatePositionAt(0);
+  auto end_of_line_1 = start_pos->CreateNextLineEndPosition(
+      ui::AXBoundaryBehavior::CrossBoundary);
+  EXPECT_EQ(5, end_of_line_1->text_offset());
+#endif
 }
 
 }  // namespace content
